--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bethany  Lazarus
-logo: /assets/img/headshot(1).png
-#description text below image
+logo: /assets/img/headshot(1).PNG
+description text below image
 show_downloads: true
 theme: jekyll-theme-minimal
