--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Bethany  Lazarus
 logo: /assets/img/headshot(1).PNG
-description: text below image
-show_downloads: true
-theme: jekyll-theme-minimal
+description: Mastering the Exploration of Unexplored Data, One Dataset at a Time.
+theme: jekyll-theme-merlot
